--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "build": "vite build",
-    "preview": "vite preview"
+    "prod": "server.js"
   },
   "devDependencies": {
     "vite": "^6.0.5"
